; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/util/extr_ub_event_pluggable.c_ub_get_event_sys.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/util/extr_ub_event_pluggable.c_ub_get_event_sys.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ub_event_base = type { i32 }
%struct.event_base = type { i32 }

@.str = private unnamed_addr constant [16 x i8] c"pluggable-event\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"not obtainable\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ub_get_event_sys(%struct.ub_event_base* %0, i8** %1, i8** %2, i8** %3) #0 {
  %5 = alloca %struct.ub_event_base*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i8**, align 8
  %9 = alloca %struct.event_base*, align 8
  store %struct.ub_event_base* %0, %struct.ub_event_base** %5, align 8
  store i8** %1, i8*** %6, align 8
  store i8** %2, i8*** %7, align 8
  store i8** %3, i8*** %8, align 8
  %10 = load %struct.ub_event_base*, %struct.ub_event_base** %5, align 8
  %11 = call %struct.event_base* @ub_libevent_get_event_base(%struct.ub_event_base* %10)
  store %struct.event_base* %11, %struct.event_base** %9, align 8
  %12 = load %struct.event_base*, %struct.event_base** %9, align 8
  %13 = call i32 @assert(%struct.event_base* %12)
  %14 = load i8**, i8*** %6, align 8
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8** %14, align 8
  %15 = call i8* (...) @event_get_version()
  %16 = load i8**, i8*** %7, align 8
  store i8* %15, i8** %16, align 8
  %17 = load i8**, i8*** %8, align 8
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8** %17, align 8
  ret void
}

declare dso_local %struct.event_base* @ub_libevent_get_event_base(%struct.ub_event_base*) #1

declare dso_local i32 @assert(%struct.event_base*) #1

declare dso_local i8* @event_get_version(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
